--- a/pickup/Procfile
+++ b/pickup/Procfile
@@ -1,2 +1,2 @@
 release: python manage.py migrate --run-syncdb
-web: gunicorn pickup.wsgi --log-file -
+web: $(gunicorn pickup.wsgi --log-file -; python manage.py rebuild_index)
